src/test/deca/context/invalid/created/binary_exp/op_arith/div_A_int.deca
// Description :
//    test div entre un A et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type A, L’opérande droite est de type int. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur /
class A{}
{
A a;
int b;
int c = a / b;
}
